# common

./: .gitignore  COPYING-AGPL-3.txt  COPYING-CC-BY-SA-4.txt  COPYING-GPL-3.txt  COPYING.txt  Cargo.toml  LICENSE.txt  README.md
dataset/: ASMOV.md  Cargo.toml  README.md
dataset-fieldenum/derive/: Cargo.toml
dataset-fieldenum/derive/src/: lib.rs
dataset-fieldenum/derive/tests/: dataset_field_enum.rs
dataset-fieldenum/lib/: Cargo.toml
dataset-fieldenum/lib/src/: lib.rs
dataset/docs/: DESIGN.md  PLAN.md  TODO.md
dataset/src/: dataset.rs  error.rs  lib.rs  model.rs  sql.rs
dataset/src/dataset/: memory.rs  strategy.rs
dataset/src/driver/: postgres.rs  postgresql.rs  sql.rs  sqlite.rs
dataset/src/macros/: imprint.rs
dataset/src/model/: id.rs  meta.rs
dataset/tests/: implementation.rs  modeling.rs
docs/: DESIGN.md  LICENSE.md  PLAN.md  Roadmap.md  TODO.md
docs/design/: README.md
docs/design/v1/: README.md
docs/licensing/: COPYING-AGPL3.txt  COPYING-CC-BY-SA-4.txt  COPYING-GPL-3.txt  README.md
linux/: Cargo.toml
linux/src/: installpath.rs  lib.rs
testing/: .gitignore  COPYING.txt  Cargo.toml  README.md  TODO.md
testing/docs/: TODO.md
testing/docs/notes/: notes-roylaurie.md
testing/examples/: typical.rs
testing/src/: extension.rs  group.rs  lib.rs  module.rs  namepath.rs  test.rs
testing/testing/fixtures/integration/typical/test_things/: sample.txt
testing/tests/: _unit_extend_all.rs.old  sharing.rs
testing/tests/shared/: mod.rs
tool/skeletons/: .gitignore  COPYING.txt  README.md  skeldir.py
tool/skeletons/skeletons/asmov/git/repository/: skeleton.json
tool/skeletons/skeletons/asmov/git/repository/skeleton/: .gitignore  COPYING.txt  README.md
tool/skeletons/skeletons/asmov/git/repository/skeleton/docs/: Roadmap.md
tool/skeletons/skeletons/asmov/git/repository/skeleton/docs/design/: README.md
tool/skeletons/skeletons/asmov/git/repository/skeleton/docs/design/v1/: README.md
traitenum/: COPYING.txt  Cargo.toml  README.md
traitenum/cargo/: Cargo.toml
traitenum/cargo/src/: cli.rs  cmd.rs  lib.rs  main.rs  meta.rs
traitenum/cargo/src/cmd/: enumtrait.rs  workspace.rs
traitenum/cargo/src/cmd/enumtrait/: add.rs  remove.rs
traitenum/cargo/src/cmd/workspace/: init.rs  new.rs
traitenum/docs/: PLAN.md  Roadmap.md
traitenum/docs/design/: README.md
traitenum/docs/design/v1/: README.md
traitenum/docs/design/v2/: README.md
traitenum/docs/design/v3/: README.md
traitenum/lib/: Cargo.toml
traitenum/lib/src/: error.rs  lib.rs
traitenum/lib/src/macros/: enumtrait.rs  traitenum.rs
traitenum/macro/: Cargo.toml
traitenum/macro/src/: lib.rs
traitenum/macro/tests/: sample-usage.rs
traitenum/parse/: Cargo.toml
traitenum/parse/src/: gen.rs  lib.rs  macros.rs  model.rs
traitenum/parse/src/model/: parse.rs
traitenum/prelude/: Cargo.toml
traitenum/tests/exporter/derive/: Cargo.toml
traitenum/tests/exporter/derive/src/: lib.rs
traitenum/tests/exporter/lib/: Cargo.toml
traitenum/tests/exporter/lib/src/: lib.rs  simple_trait.rs
traitenum/tests/importer/: Cargo.toml
traitenum/tests/importer/src/: lib.rs
