[workspace]
resolver = "2"
members = [
    "dataset",
    "dataset-fieldenum/lib",
    "dataset-fieldenum/derive",
    "linux",
    "traitenum/prelude",
    "traitenum/lib",
    "traitenum/macro",
    "traitenum/cargo",
    "traitenum/tests/exporter/lib",
    "traitenum/tests/exporter/derive",
    "traitenum/tests/importer",
    "testing"
]

[[workspace.metadata.traitenum.library]]
name = "dataset-fieldenum"
lib-dir = "lib"
derive-dir = "derive"
