[package]
name = "asmov-dataset"
version = "0.0.1"
description = "App data modeling library"
authors = ["Asmov LLC <development.pub@asmov.software>"]
repository = "https://github.com/asmov/tempo"
license = "AGPL-3.0-or-later"
keywords = ["model", "db", "sql"]
categories = []
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc", features = ["serde"] }
chrono = { version = "0", features = ["serde"] }
derivative = "2"
derive_builder = "0"
rustc-hash = "2"
send-future = "0.1.0"
serde = { version = "1", features = ["derive"] }
# optional
sqlx = { version = "0", optional = true, features = ["chrono" ] }
thiserror = "1"

[features]
#default = []
#default = ["postgres"]
#default = ["sqlite"]
default = ["postgres", "sqlite"]
sql = []
postgres = ["sql", "sqlx/postgres"]
sqlite = ["sql", "sqlx/sqlite"]
