[package]
name = "asmov-testing"
authors = ["Asmov LLC <devolopment.pub@asmov.software>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
function_name = "0.3.0"
futures = "0.3.26"
lazy_static = "1.4.0"
once_cell = "1.17.1"
rand = "0.8.5"
regex = "1.7.1"
shutdown_hooks = "0.1.0"
sysinfo = "0.28.1"
