[package]
name = "asmov-testing"
version = "2.1.4"
edition = "2021"
description = "Creates a backup .bak copy of a file"
authors = ["Asmov LLC <development.pub@asmov.software>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/asmov/common"
homepage = "https://github.com/asmov/common/tree/dev/testing"
categories = ["development-tools::testing"]
keywords = ["integration", "unit", "benchmark", "test", "tests"]

[dependencies]
anyhow = "1"
function_name = "0"
futures = "0"
lazy_static = "1"
once_cell = "1"
rand = "0"
regex = "1"
shutdown_hooks = "0"
sysinfo = "0"

[dev-dependencies]
lazy_static = "1.4.0"

[[example]]
name = "typical"
test = true
