[package]
name = "cargo-traitenum"
authors = ["Asmov LLC"]
description = "Cargo subcommands to generate traitenum traits and derive macros"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.4"
convert_case = "0.6.0"
proc-macro2 = "1.0.70"
quote = "1.0.33"
rustfmt = "0.10.0"
syn = { version = "2.0.39", features = ["full"] }
thiserror = "1.0.50"
toml = { version = "0.8.8", features = ["display"] }
