[package]
name = "traitenum-test-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
#traitenum = { version = "0.1.0", path = "../../../macro" }
traitenum-prelude = { version = "0.1.0", path = "../../../prelude" }

[dev-dependencies]
bincode = "1.3.3"
traitenum-lib = { version = "0.1.0", path = "../../../lib" }
